Finalizing implementation of the service module
